# Mafonchik_OOP

./: README.md
laba_1/: CMakeLists.txt  README.md
laba_1/include/: header.hpp
laba_1/src/: main.cpp  task.cpp  test_main.cpp
